AC_PREREQ(2.59)
AC_INIT([libworkqueue priority workqueue scheduler], [0.1], [karl@hiramoto.org])

AM_INIT_AUTOMAKE([-Wall -Werror])
AC_PROG_CC
AC_PROG_LIBTOOL
AM_PROG_CC_C_O
AC_CONFIG_HEADERS([libworkqueue-config.h])


AC_CONFIG_FILES([Makefile
                 lib/Makefile
                 examples/Makefile
		])


AC_OUTPUT
